<resources>
    <string name="app_name">Fitness Monkey</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Not a Member? Sign Up.</string>
    <string name="sign_up_new">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Confirm Password</string>
    <string name="already_sign_in">Already a Member? Login here.</string>
</resources>
