<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.fih.scu.fitnessmonkey.MainActivity">

    <TextView
        android:id="@+id/textView11"
        android:fontFamily="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="#fff"
        android:text="@string/sign_up_new"
        android:textSize="50sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp">

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="86dp"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText11"
                android:layout_width="299sp"
                android:layout_height="50sp"
                android:background="#11000000"
                android:drawableLeft="@mipmap/ic_launcher_user"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="299sp"
                android:layout_height="50sp"
                android:background="#11000000"
                android:drawableLeft="@mipmap/ic_email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="299sp"
                android:layout_height="50sp"
                android:background="#11000000"
                android:drawableLeft="@mipmap/ic_launcher_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="299sp"
                android:layout_height="50sp"
                android:background="#11000000"
                android:drawableLeft="@mipmap/ic_launcher_lock"
                android:ems="10"
                android:hint="@string/password_again"
                android:inputType="textPersonName" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="299sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="By Checking this box you agree to all the Terms and Conditions."
                android:textColor="#110000" />

            <android.support.v7.widget.CardView
                android:layout_width="299sp"
                android:layout_height="50sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/editText12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorPrimary"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/sign_up_new"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/already_sign_in"
                android:textAlignment="center" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp">
            </com.google.android.gms.common.SignInButton>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
